# dmgbuild

./: .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.test.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit-update.yml
dmgbuild/: __init__.py  __main__.py  badge.py  colors.py  core.py  licensing.py  resources.py
dmgbuild/resources/: background.tiff
doc/: Makefile  conf.py  example.rst  index.rst  make.bat  settings.rst  usage.rst
docs/: conf.py  example.rst  index.rst  settings.rst  usage.rst
docs/_static/: README.rst
examples/: settings.json  settings.py
scripts/: dmgbuild
src/dmgbuild/: __init__.py  __main__.py  badge.py  colors.py  core.py  licensing.py  resources.py
tests/: test_samples.py
tests/examples/: settings.json  settings.py
tests/licenses/: settings.json
