[metadata]
name = dmgbuild
version = attr: src.dmgbuild.__version__
url = http://alastairs-place.net/projects/dmgbuild
project_urls =
    Source = https://github.com/al45stair/dmgbuild
author = Alastair Houghton
author_email = alastair@alastairs-place.net
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Desktop Environment
license = MIT License
license_file = LICENSE
description = macOS command line utility to build disk images
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    dmg
platforms = darwin

[options]
zip_safe = False
packages = find:
python_requires = >= 3.7
include_package_data = True
package_dir =
    = src
install_requires =
    ds_store >= 1.1.0
    mac_alias >= 2.0.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dmgbuild = dmgbuild.__main__:main

[aliases]
test=pytest

[flake8]
exclude=\
    */.eggs/*,\
    build/*,\
    .tox/*,\
    venv*

max-complexity = 25
max-line-length = 119
