[metadata]
name = dmgbuild
version = attr: dmgbuild.__version__
url = http://alastairs-place.net/projects/dmgbuild
project_urls =
    Source = https://github.com/al45stair/dmgbuild
author = Alastair Houghton
author_email = alastair@alastairs-place.net
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: Desktop Environment
license = MIT License
license_files =
    LICENSE
description = macOS command line utility to build disk images
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    dmg
platforms = darwin

[options]
zip_safe = False
packages = find:
python_requires = >= 3.7
include_package_data = True
package_dir =
    = src
install_requires =
    ds_store >= 1.1.0
    mac_alias >= 2.0.1
    # importlib.resources wasn't fully featured until Python3.9;
    # install the backwards compatibility shim from Python3.12.
    importlib_resources == 5.9; python_version <= "3.8"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dmgbuild = dmgbuild.__main__:main

[options.extras_require]
dev =
    pre-commit
    tox
test =
    pytest
    pytest-tldr
    pytest-cov
docs =
    sphinx
    sphinx-autobuild
    sphinx_rtd_theme
badge_icons =
    pyobjc-framework-Quartz >= 3.0.4

[flake8]
exclude=\
    */.eggs/*,\
    build/*,\
    docs/*,\
    tests/examples/*,\
    .tox/*,\
    venv*
extend_ignore=C901,E203
max-complexity = 25
max-line-length = 119
